--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="mainContent">
                 <p class="textContent">Description</p>
             </div>
-            <button><a href = "https://github.com/SusnataPYTHON/Card-Builder">Click here to download this website for customizing it</a></button>
+            <button><a href = "https://github.com/SusnataPYTHON/Card-Builder" class="downloadButton">Click here to download this website for customizing it</a></button>
         </div>
     </div>
     <script src="./js/main.js"></script>
