--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <div class="mainContent">
                 <p class="textContent">Description</p>
             </div>
+        </div>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
